--- a/package.json
+++ b/package.json
@@ -1,25 +1,39 @@
 {
-    "name": "bootstrap"
-  , "description": "Sleek, intuitive, and powerful front-end framework for faster and easier web development."
-  , "version": "2.1.0"
-  , "keywords": ["bootstrap", "css"]
-  , "homepage": "http://twitter.github.com/bootstrap/"
-  , "author": "Twitter Inc."
-  , "scripts": { "test": "make test" }
-  , "repository": {
-      "type": "git"
-    , "url": "https://github.com/twitter/bootstrap.git"
-  }
-  , "licenses": [
+  "name": "die-bootstrap",
+  "description": "Sleek, intuitive, and powerful front-end framework for faster and easier web development.",
+  "version": "2.1.0",
+  "keywords": [
+    "bootstrap",
+    "css",
+    "die"
+  ],
+  "homepage": "https://github.com/zeekay/die-bootstrap",
+  "author": {
+    "name": "Zach Kelling",
+    "email": "zeekayy@gmail.com",
+    "url": "http://whatit.is"
+  },
+  "main": "index.js",
+  "scripts": {
+    "test": "make test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zeekay/die-bootstrap"
+  },
+  "licenses": [
     {
-        "type": "Apache-2.0"
-      , "url": "http://www.apache.org/licenses/LICENSE-2.0"
+      "type": "Apache-2.0",
+      "url": "http://www.apache.org/licenses/LICENSE-2.0"
     }
-  ]
-  , "devDependencies": {
-      "uglify-js": "1.2.6"
-    , "jshint": "0.6.1"
-    , "recess": "1.0.3"
-    , "connect": "2.1.3"
+  ],
+  "devDependencies": {
+    "uglify-js": "1.2.6",
+    "jshint": "0.6.1",
+    "recess": "1.0.3",
+    "connect": "2.1.3"
+  },
+  "dependencies": {
+    "recess": "~1.1.6"
   }
 }
