--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "die-bootstrap",
   "description": "Sleek, intuitive, and powerful front-end framework for faster and easier web development.",
-  "version": "2.1.0",
+  "version": "2.1.0-1",
   "keywords": [
     "bootstrap",
     "css",
